--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<form id="my-form" method="post">
+		<div>
+			<label for="name">Name</label>
+			<input type="text" id="name" minlength="3" maxlength="50" required/>
+		</div>
+		<div>
+			<label for="portfolio">Portfolio</label>
+			<input type="url" id="portfolio" name="portfolio">
+		</div>
+		<div>
+			<lable for="favColor">favColor</lable>
+			<input type = "color" id ="favColor">
+		</div>
+		<div>
+			<lable for ="likeness">From one to hundred choose likeness</lable>
+			<input type="range" min="1" max="100">
+		</div>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
