--- a/main.html
+++ b/main.html
@@ -16,15 +16,16 @@
 		</div>
 		<div>
 			<label for='portfolio'>Portfolio</label>
-			<input type="url" id="portfolio" name="portfolio">
+			<input type="url" id="portfolio" name="portfolio" required>
 		</div>
 		<div>
-			<lable for='favColor'>favColor</lable>
+			>
+			<label for='favColor'>Favorite Color</label>
 			<input type = "color" id ="favColor">
 		</div>
 		<div>
-			<lable for ='likeness'>From one to hundred choose likeness</lable>
-			<input type="range" min="1" max="100">
+			<label for ='likeness'>From one to hundred choose likeness</label>
+			<input type="range" id="likeness" name="likeness" min="1" max="100">
 		</div>
 	</form>
     <script type="text/javascript" src="./script.js">
